WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48158
WebContext::ensureWebProcess shouldn't send multiple InitializeWebProcess messages.
https://bugs.webkit.org/show_bug.cgi?id=48158
Summary
WebContext::ensureWebProcess shouldn't send multiple InitializeWebProcess mes...
Anders Carlsson
Reported
2010-10-22 15:43:20 PDT
WebContext::ensureWebProcess shouldn't send multiple InitializeWebProcess messages.
Attachments
Patch
(1.53 KB, patch)
2010-10-22 15:47 PDT
,
Anders Carlsson
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-10-22 15:47:04 PDT
<
rdar://problem/8512572
>
Anders Carlsson
Comment 2
2010-10-22 15:47:43 PDT
Created
attachment 71604
[details]
Patch
Anders Carlsson
Comment 3
2010-10-22 15:50:37 PDT
Comment on
attachment 71604
[details]
Patch weinig reviewed this.
Anders Carlsson
Comment 4
2010-10-22 15:52:08 PDT
Committed
r70359
: <
http://trac.webkit.org/changeset/70359
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug