WebContext::ensureWebProcess shouldn't send multiple InitializeWebProcess messages. https://bugs.webkit.org/show_bug.cgi?id=48158 <rdar://problem/8512572>

Reviewed by Sam Weinig.

If the web process was launching when another call to ensureWebProcess is sent, we
would end up sending another InitializeWebProcess message to it which would result
in assertions firing. Fix this by only checking for m_process, and not requiring a process
to be valid (which it won't be until it's finished launching).

* UIProcess/WebContext.cpp:
(WebKit::WebContext::ensureWebProcess):

git-svn-id: svn://svn.chromium.org/blink/trunk@70359 bbb929c8-8fbe-4397-9dbb-9b2b20218538