third_party/WebKit/WebKit2/UIProcess/WebContext.cpp
@@ -142,7 +142,7 @@ void WebContext::languageChanged()
 
 void WebContext::ensureWebProcess()
 {
-    if (hasValidProcess())
+    if (m_process)
         return;
 
     m_process = WebProcessManager::shared().getWebProcess(this);
